--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.pyc
 *.pyo
-# ignore env and staticfiles with cookires
+# ignore env and staticfiles with cookies
 .env
 /staticfiles/
 Cookies/
